logs/dev_employee/failure-evidence-host-checks-failed-20260526-r1_host_py_compile.txt
  File "app/main.py", line 1
    def intentionally_broken(:
                             ^
SyntaxError: invalid syntax
